# cortex

./: .dockerignore  .env.example  .gitignore  .promo-video.json  AGENTS.md  CLAUDE.md  Dockerfile  LANGFUSE.md  LICENSE  README.md  docker-compose.observability.yml  docker-compose.yml  pyproject.toml  test_results_artifact.txt
.deepeval/: .deepeval_telemetry.txt
.github/: pull_request_template.md
cloudrun/: service.yaml
docs/: agent-tooling.md  architecture.md  billing.md  deployment.md  env-vars-production.md  getting-started.md  model-evaluation.md  observability.md  router-fine-tuning.md  testing-and-quality.md
load-tests/: README.md  agent_chat.js  health.js  internal_agent_loop.js  lib.js  research.js
optimized_prompts/: followup_answer_optimized.json  pipeline_report.json  rag_chat_system_optimized.json  report_optimized.json  router_action_optimized.json  summarize_optimized.json  web_search_decision_optimized.json  web_search_repair_optimized.json
scripts/: PIPELINE_FINDINGS.md  benchmark_rag_chat.py  deploy-ui.sh  deploy.sh  dispatch_outbox.py  generate_router_dataset.py  graphify-post-commit.sh  graphify-rebuild.sh  install-graphify-post-commit.sh  optimize_prompts.py  optimize_router_prompt.py  post_deploy_smoke.py  prompt_optimization_pipeline.py  render_k6_report.py  run_all.sh  run_backends.sh  score_router.py  setup_alerting.sh  setup_secrets.sh  sync_langfuse_dataset.py  vercel-ui-env.sh
src/: __init__.py  auth.py  billing.py  citations.py  config.py  errors.py  inngest_client.py  itinerary.py  main.py  outbox.py  planner.py  rag.py  rag_engine.py  readiness.py  sessions.py  storage.py  supabase_keys.py  user_memory.py
tests/: conftest.py  test_agent_loop.py  test_ai_regression_gate.py  test_api.py  test_arxiv_mcp.py  test_auth.py  test_auth_enforcement.py  test_benchmark_api.py  test_benchmark_helpers.py  test_billing_service.py  test_cache.py  test_citations.py  test_composio_config.py  test_composio_toolset.py  test_dspy_optimizer.py  test_edges.py  test_embeddings.py  test_graph.py  test_graph_async_execution.py  test_graph_store.py  (+38 more)
(+226 files in other folders)
