[project]
name = "cortex"
version = "0.1.0"
description = "Cortex — multi-step research and RAG orchestration with LangGraph, Tavily, and LLMs"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-community>=0.4.2",
    "langchain-openai>=0.2.0",
    "langchain-ollama>=0.1.0",
    "tavily-python>=0.5.0",
    "openai>=1.0.0",
    "fastapi>=0.139.1",
    "uvicorn[standard]>=0.30.0",
    "slowapi>=0.1.9",
    "sentry-sdk[fastapi]>=2.66.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "pypdf>=4.2.0",
    "python-docx>=1.1.2",
    "beautifulsoup4>=4.12.0",
    "jinja2>=3.1.0",
    "langsmith>=0.1.147",
    "langfuse>=2.0.0",
    "PyJWT[crypto]>=2.10.1",
    "inngest>=0.5.18",
    "llama-index-core>=0.12.0",
    "llama-index-embeddings-openai>=0.3.0",
    "llama-index-embeddings-ollama>=0.9.0",
    "stripe>=11.0.0",
    "redis>=5.0.0",
    "neo4j>=5.26.0",
    "cohere>=5.0.0",
    "mcp>=1.12.4",
    "composio-langchain>=0.6.0",
    "langchain-tavily>=0.2.18",
    "arxiv-mcp-server>=0.5.0",
    "langchain-mcp-adapters>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.13.0",
    "bandit[toml]>=1.7.0",
]
evals = [
    "dspy[optuna]>=3.2.1",
    "deepeval>=3.0.0",
    "pandas>=2.2.0",
]
finetune = [
    "datasets>=2.20",
    "huggingface-hub>=0.23",
]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.bandit]
targets = ["src"]
severity = "MEDIUM"
confidence = "MEDIUM"
skips = []
